Aula bonus de Sass da DH

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         officiis commodi architecto blanditiis, fuga quibusdam hic. Ipsam aut blanditiis, magnam at
                         adipisci
                         incidunt voluptatibus expedita unde.</p>
-                        <button class="terra">Ver Mais</button>
+                        <button class="btn-terra">Ver Mais</button>
                 </article>
                 <article>
                     <div class="serv-img"></div>
@@ -49,7 +49,7 @@
                         officiis commodi architecto blanditiis, fuga quibusdam hic. Ipsam aut blanditiis, magnam at
                         adipisci
                         incidunt voluptatibus expedita unde.</p>
-                        <button class="terra">Ver Mais</button>
+                        <button class="btn-terra">Ver Mais</button>
                 </article>
                 <article>
                     <div class="serv-img"></div>
@@ -59,7 +59,7 @@
                         officiis commodi architecto blanditiis, fuga quibusdam hic. Ipsam aut blanditiis, magnam at
                         adipisci
                         incidunt voluptatibus expedita unde.</p>
-                        <button class="terra">Ver Mais</button>
+                        <button class="btn-terra">Ver Mais</button>
                 </article>
             </section>
             <section class="pdt">
@@ -72,7 +72,7 @@
                         officiis commodi architecto blanditiis, fuga quibusdam hic. Ipsam aut blanditiis, magnam at
                         adipisci
                         incidunt voluptatibus expedita unde.</p>
-                        <button class="cyan">Ver Mais</button>
+                        <button class="btn-cyan">Ver Mais</button>
                 </article>
                 <article>
                     <div class="pdt-img"></div>
@@ -82,7 +82,7 @@
                         officiis commodi architecto blanditiis, fuga quibusdam hic. Ipsam aut blanditiis, magnam at
                         adipisci
                         incidunt voluptatibus expedita unde.</p>
-                        <button class="cyan">Ver Mais</button>
+                        <button class="btn-cyan">Ver Mais</button>
                 </article>
                 <article>
                     <div class="pdt-img"></div>
@@ -92,7 +92,7 @@
                         officiis commodi architecto blanditiis, fuga quibusdam hic. Ipsam aut blanditiis, magnam at
                         adipisci
                         incidunt voluptatibus expedita unde.</p>
-                        <button class="cyan">Ver Mais</button>
+                        <button class="btn-cyan">Ver Mais</button>
                 </article>
             </section>
         </main>
